--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -8,7 +8,9 @@
 # mini E3 with that SD card.
 
 # See docs/Config_Reference.md for a description of parameters.
-
+[include mainsail.cfg]
+[include KAMP_Settings.cfg]
+[include purge_line.cfg]
 
 
 ############################################################################
@@ -19,16 +21,13 @@ gcode:
   G28
   {% set BED_TEMP = params.BED_TEMP|default(50)|float %}
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
+  BED_MESH_CLEAR
   BED_MESH_CALIBRATE
   #SET_PRESSURE_ADVANCE ADVANCE=0.01
 ;*** End Preheating ***
-  G92 E0 ; Reset Extruder
-  G1 X0.1 Y200.0 Z0.3 F1500.0 E15 ; Draw the first line
-  G1 X0.4 Y200.0 Z0.3 F5000.0 ; Move to side a little
-  G1 X0.4 Y20 Z0.3 F1500.0 E30 ; Draw the second line
-  G92 E0 ; Reset Extruder
-  G1 Z2.0 F3000 ; Move Z Axis up little to prevent scratching of Heat Bed
-  G1 X5 Y20 Z0.3 F5000.0 ; Move over to prevent blob squish
+  LINE_PURGE
+
+
 [gcode_macro END_PRINT]
 gcode:
   M104 S0                     ;extruder heater off
@@ -39,8 +38,7 @@ gcode:
   G28 X0 Y120                              ;move X/Y to min endstops, so the head is out of the way
   M84                         ;steppers off
   G90                         ;absolute positioning
-[include mainsail.cfg]
-[include KAMP_Settings.cfg]
+
 ############################################################################
 ############################################################################
 ############################################################################
@@ -51,13 +49,14 @@ sensor_pin: PC14
 control_pin: PA1
 x_offset: -44
 y_offset: -6
-z_offset = 1.7500 #1.6000   #1.7000        #1.8000     #1.7600
+z_offset: 2
+#z_offset = 1.7500 #1.6000   #1.7000        #1.8000     #1.7600
 #speed:
 
 [safe_z_home]
-home_xy_position: 117.5, 117.5 # Change coordinates to the center of your print bed
-speed: 60
-z_hop: 2                 # Move up 10mm
+home_xy_position: 154, 110 # Change coordinates to the center of your print bed
+speed: 100
+z_hop: 5                 # Move up 5mm
 z_hop_speed: 5
 
 [screws_tilt_adjust]
@@ -98,7 +97,7 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^PC0
 position_endstop: 0
-position_max: 245
+position_max: 235
 homing_speed: 70
 
 [tmc2209 stepper_x]
@@ -116,7 +115,7 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^PC1
 position_endstop: 0
-position_max: 245
+position_max: 235
 homing_speed: 70
 
 [tmc2209 stepper_y]
@@ -241,4 +240,8 @@ command: bash /home/dyankov/klipper-backup/script.sh
 timeout: 90.0
 verbose: True
 
-
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bltouch]
+#*# z_offset = 1.940
