--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -25,7 +25,14 @@ gcode:
   BED_MESH_CALIBRATE
   #SET_PRESSURE_ADVANCE ADVANCE=0.01
 ;*** End Preheating ***
-  LINE_PURGE
+  #LINE_PURGE
+  G1 X20 Y0.1 Z0.3 F5000.0 ; Move to start position
+  G1 X200.0 Y0.1 Z0.3 F1500.0 E15 ; Draw the first line
+  G1 X200.0 Y0.4 Z0.3 F5000.0 ; Move to side a little
+  G1 X20 Y0.4 Z0.3 F1500.0 E30 ; Draw the second line
+  G92 E0 ; Reset Extruder
+  G1 Z2.0 F3000 ; Move Z Axis up little to prevent scratching of Heat Bed
+  G1 X20 Y5 Z0.3 F5000.0 ; Move over to prevent blob squish
 
 
 [gcode_macro END_PRINT]
@@ -49,9 +56,10 @@ sensor_pin: PC14
 control_pin: PA1
 x_offset: -44
 y_offset: -6
-z_offset: 2
-#z_offset = 1.7500 #1.6000   #1.7000        #1.8000     #1.7600
+samples: 2
+z_offset = 1.660
 #speed:
+#1.7500
 
 [safe_z_home]
 home_xy_position: 154, 110 # Change coordinates to the center of your print bed
@@ -62,9 +70,9 @@ z_hop_speed: 5
 [screws_tilt_adjust]
 screw1: 76, 33
 screw1_name: front left screw
-screw2: 245, 33
+screw2: 201, 33
 screw2_name: front right screw
-screw3: 245, 201
+screw3: 201, 201
 screw3_name: rear right screw
 screw4: 76, 201
 screw4_name: rear left screw
@@ -135,6 +143,7 @@ rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 #position_endstop: 0.0
 position_max: 250
+position_min: -6
 
 [tmc2209 stepper_z]
 uart_pin: PC11
@@ -245,3 +254,32 @@ verbose: True
 #*#
 #*# [bltouch]
 #*# z_offset = 1.940
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.022500, -0.017500, -0.022500
+#*# 	  -0.037500, -0.032500, -0.032500
+#*# 	  -0.030000, -0.040000, -0.045000
+#*# x_count = 3
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 107.69999999999999
+#*# max_x = 127.27000000000001
+#*# min_y = 107.7
+#*# max_y = 127.27000000000001
+#*#
+#*# [bltouch]
+#*# z_offset = 1.720
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bltouch]
+#*# z_offset = 1.400
